// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VerifySchool component should render if there are admins 1`] = `
<VerifySchool
  passedAdmins={
    Array [
      Object {
        "email": "joyharjo@quill.org",
        "id": 1,
        "name": "Joy Harjo",
      },
    ]
  }
  passedSchoolName="School Name"
>
  <div>
    <AssignActivityPackBanner>
      <span />
    </AssignActivityPackBanner>
    <div
      className="container account-form add-admin-info"
    >
      <RequestAdminAccessForm
        admins={
          Array [
            Object {
              "email": "joyharjo@quill.org",
              "id": 1,
              "name": "Joy Harjo",
            },
          ]
        }
        schoolName="School Name"
      >
        <img
          alt=""
          src="undefined/images/onboarding/school_verification.svg"
        />
        <h1>
          <span>
            Please request permission to become an admin of:
          </span>
          <span
            className="school-name"
          >
            School Name
          </span>
        </h1>
        <p
          className="sub-header"
        >
          Which admin(s) do you want to send the request to?
        </p>
        <section
          className="user-account-section admin-access-request-section"
        >
          <AdminTable
            schoolAdmins={
              Array [
                Object {
                  "email": "joyharjo@quill.org",
                  "id": 1,
                  "name": "Joy Harjo",
                },
              ]
            }
            selectedAdminIds={Array []}
            setSelectedAdminIds={[Function]}
          >
            <div
              className="admin-selection-table"
            >
              <div
                className="admin-selection-row top-row"
              >
                <button
                  aria-label="Select all admins"
                  className="focus-on-light quill-checkbox unselected"
                  onClick={[Function]}
                  type="button"
                />
                <div>
                  Select all
                </div>
              </div>
              <div
                className="admin-selection-row"
                key="1"
              >
                <button
                  aria-label="Select Joy Harjo"
                  className="focus-on-light quill-checkbox unselected"
                  onClick={[Function]}
                  type="button"
                />
                <div>
                  <span
                    className="name"
                  >
                    Joy Harjo
                  </span>
                  <span
                    className="email"
                  >
                    joyharjo@quill.org
                  </span>
                </div>
              </div>
            </div>
          </AdminTable>
          <Input
            autoComplete="on"
            className="reason"
            handleChange={[Function]}
            label="Why do you want to be an admin?"
            value=""
          >
            <div
              className="input-container  inactive  reason "
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex={-1}
            >
              <label>
                Why do you want to be an admin?
              </label>
              <input
                autoComplete="on"
                maxLength={10000}
                onChange={[Function]}
                onFocus={[Function]}
                value=""
              />
            </div>
          </Input>
        </section>
        <div
          className="button-wrapper"
        >
          <button
            className="quill-button primary contained medium focus-on-light disabled"
            disabled={true}
            type="button"
          >
            Submit
          </button>
        </div>
        <SkipForNow>
          <a
            className="skip-for-now"
            href="/finish_sign_up"
          >
            Skip for now
          </a>
        </SkipForNow>
      </RequestAdminAccessForm>
    </div>
  </div>
</VerifySchool>
`;

exports[`VerifySchool component should render if there are no admins 1`] = `
<VerifySchool
  passedAdmins={Array []}
  passedSchoolName="School Name"
>
  <div>
    <AssignActivityPackBanner>
      <span />
    </AssignActivityPackBanner>
    <div
      className="container account-form add-admin-info"
    >
      <SchoolVerificationForm
        schoolName="School Name"
      >
        <img
          alt=""
          src="undefined/images/onboarding/school_verification.svg"
        />
        <h1>
          <span>
            Please verify your connection to:
          </span>
          <span
            className="school-name"
          >
            School Name
          </span>
        </h1>
        <p
          className="sub-header"
        >
          Quill is committed to securing the privacy of districts, schools, teachers, and students. Complete the form below to ensure we are providing you with the appropriate access.
        </p>
        <section
          className="user-account-section school-verification-section"
        >
          <h3>
            Please provide the URL of your LinkedIn profile
          </h3>
          <Input
            autoComplete="on"
            handleChange={[Function]}
            helperText="If you do not have a LinkedIn profile, please provide a link to another website that demonstrates your connection to School Name."
            placeholder="Enter URL"
            showPlaceholderWhenInactive={true}
            value={null}
          >
            <div
              className="input-container  inactive  undefined "
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex={-1}
            >
              <label />
              <input
                autoComplete="on"
                maxLength={10000}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="Enter URL"
                value={null}
              />
              <span
                className="helper-text"
              >
                If you do not have a LinkedIn profile, please provide a link to another website that demonstrates your connection to School Name.
              </span>
            </div>
          </Input>
          <h3>
            Why do you want to be an admin for 
            School Name
            ?
          </h3>
          <Input
            autoComplete="on"
            handleChange={[Function]}
            placeholder="Type an answer"
            showPlaceholderWhenInactive={true}
            value={null}
          >
            <div
              className="input-container  inactive  undefined "
              onClick={[Function]}
              onKeyDown={[Function]}
              role="button"
              tabIndex={-1}
            >
              <label />
              <input
                autoComplete="on"
                maxLength={10000}
                onChange={[Function]}
                onFocus={[Function]}
                placeholder="Type an answer"
                value={null}
              />
            </div>
          </Input>
        </section>
        <div
          className="button-wrapper"
        >
          <button
            className="quill-button primary contained medium focus-on-light disabled"
            disabled={true}
            type="button"
          >
            Submit
          </button>
        </div>
        <SkipForNow>
          <a
            className="skip-for-now"
            href="/finish_sign_up"
          >
            Skip for now
          </a>
        </SkipForNow>
      </SchoolVerificationForm>
    </div>
  </div>
</VerifySchool>
`;
